button overflow fix

--- a/styles/Junior_dev.css
+++ b/styles/Junior_dev.css
@@ -248,6 +248,7 @@ main {
     text-decoration: none;
     color: #dfeceb;
     font-family: verdana;
+    font-size:2em;
 }
 
 .topic {
